# skin-plus-plus

./: .gitignore  CMakeLists.txt  README.md
include/: CanvasView.hpp  ColorButtons.hpp  ColorSelector.hpp  ColorWheel.hpp  Document.hpp  MainWindow.hpp
src/: CanvasView.cpp  ColorButtons.cpp  ColorSelector.cpp  ColorWheel.cpp  Document.cpp  MainWindow.cpp  main.cpp
